fix: Improve spacing on mobile devices

--- a/src/components/Stock/Stock.module.css
+++ b/src/components/Stock/Stock.module.css
@@ -14,6 +14,10 @@
   border-color: var(--border);
   border-radius: var(--borderRadius);
 }
+.stock a {
+  color: var(--primary);
+  text-decoration: none;
+}
 .change {
   display: flex;
   margin-left: 0.5rem;
